@@ -1,5 +1,6 @@
 [messages]
 jd_plays-december-2019-welcome1=Welcome to December, lets go search for Santa up north and reminisce about the last year.
+jd_plays-december-2019-shared_damage_respawn=You are safe from shared damage for __1__ seconds :)
 
 [gui-caption]
 jd_plays-december-2019-warning-label=Incomming Tunneling Biter Pack
