@@ -2,8 +2,10 @@
 Version: 17.0.13
 Date: 2019-12-02
   Features:
+    - Players are safe from suffering shared damage for 60 seconds after respawn.
   Changes:
     - Added shared damage exclusion for "snowball" type damage to avoid conflicting with that mod.
+    - Shared damage reduced to 75%
   Bugfixes:
     - Correct intermittent crash for some players with scheduled event functions shown in logs.
     - Fix crash when a vehicle died by non mod means.
